fixed overlap

--- a/public/style.css
+++ b/public/style.css
@@ -1601,6 +1601,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #f5f5f5; /* Change background color */
   padding: 10px;
   border-radius: 5px;
+  padding-right: 160px;
   position: relative; /* For positioning the date */
   border: 3px solid rgba(0,0,0,0.3);
 }
